--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@eva-design/eva": "^1.4.0",
     "@react-native-community/async-storage": "^1.8.1",
     "@rematch/core": "^1.4.0",
     "@rematch/loading": "^1.2.1",
     "@rematch/persist": "^1.1.6",
+    "@ui-kitten/components": "^4.4.1",
     "axios": "^0.19.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
@@ -27,6 +29,7 @@
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "^2.2.0",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-svg": "^12.0.3",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux-persist": "^6.0.0"
