--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
+    "react-countdown-circle-timer": "^1.1.1",
     "react-hook-form": "^5.0.3",
     "react-native": "0.61.5",
+    "react-native-circular-progress": "^1.3.6",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-router-flux": "^4.2.0",
