--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^5.0.3",
     "react-native": "0.61.5",
     "react-native-circular-progress": "^1.3.6",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-router-flux": "^4.2.0",
