--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-countdown-circle-timer": "^1.1.1",
     "react-hook-form": "^5.0.3",
     "react-native": "0.61.5",
+    "react-native-background-timer": "^2.2.0",
     "react-native-circular-progress": "^1.3.6",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.6.0",
