--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,6 +36,8 @@ target 'ReactNativeStarterKit' do
 
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
 
+  pod 'RNCPushNotificationIOS', :path => '../node_modules/@react-native-community/push-notification-ios'
+
   target 'ReactNativeStarterKitTests' do
     inherit! :search_paths
     # Pods for testing
