--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@eva-design/eva": "^1.4.0",
     "@react-native-community/async-storage": "^1.8.1",
+    "@react-native-community/push-notification-ios": "^1.1.0",
     "@rematch/core": "^1.4.0",
     "@rematch/loading": "^1.2.1",
     "@rematch/persist": "^1.1.6",
@@ -29,6 +30,7 @@
     "react-native-circular-progress": "^1.3.6",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-push-notification": "^3.1.9",
     "react-native-reanimated": "^1.7.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "^2.2.0",
