--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,6 +36,10 @@ target 'ReactNativeStarterKit' do
 
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
 
+  pod 'react-native-view-shot', :path => '../node_modules/react-native-view-shot'
+
+  pod 'RNShare', :path => '../node_modules/react-native-share'
+
   target 'ReactNativeStarterKitTests' do
     inherit! :search_paths
     # Pods for testing
