--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "^2.2.0",
+    "react-native-share": "^3.1.2",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.0.3",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-view-shot": "^3.1.2",
     "react-redux": "^7.2.0",
     "redux-persist": "^6.0.0"
   },
